<resources>
    <string name="app_name">Unit Converter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="make_by_prince_vishwakrma">Made in India</string>
    <string name="todo">todo</string>
    <string name="lg">Length</string>

    <string name="ms">Mass</string>
    <string name="tm">Time</string>
    <string name="temp">Temperature</string>
    <string name="ds">Digital Storage</string>
    <string name="enter_no">Enter no.</string>


    <string name="foot">foot</string>
    <string name="_0">0</string>
    <string name="mi">mi</string>
    <string name="m">m</string>
    <string name="km">km</string>

    <string name="cm">cm</string>

    <string name="yard">yard</string>
    <string name="inch">inch</string>
    <string name="convert">Convert</string>
    <string name="length_convert">Length Convert</string>
    <string name="inch_in">Inch (in)</string>
    <string name="foot_ft">Foot (Ft)</string>
    <string name="yard_yd">Yard (yd)</string>
    <string name="centimeter_cm">Centimeter (cm)</string>
    <string name="meter_m">Meter (m)</string>
    <string name="kilometer_km">Kilometer (km)</string>
    <string name="mile_mi">Mile (mi)</string>
    <string name="textview">TextView</string>
    <string name="enter_number">Enter Number</string>
    <string name="mass_convert">Mass Convert</string>
    <string name="time_convert">Time Convert</string>
    <string name="temp_convert">Temprature</string>
    <string name="ds_convert">Digital Storage</string>
    <string name="miligram">Milligram (mg)</string>
    <string name="gram">Gram (g)</string>
    <string name="kilo">Kilogram (kg)</string>
    <string name="pound">Pound (lb)</string>
    <string name="ton">Ton (t)</string>
    <string name="byt">Byte(b)</string>
    <string name="Kilobyte">Kilobyte (kb)</string>
    <string name="mb">Megabyte (mb)</string>
    <string name="gb">Gigabyte (gb)</string>
    <string name="tb">Terabyte (tb)</string>
    <string name="mili">Milisecond (ms)</string>
    <string name="sec">Second (s)</string>
    <string name="min">Minute (m)</string>
    <string name="hou">Hour (h)</string>
    <string name="day">Day (d)</string>
    <string name="week">week (w)</string>
    <string name="c">Celsius (°C)</string>
    <string name="f">Fahrenheit (°F)</string>
    <string name="length">Length</string>
    <string name="time">Time</string>
    <string name="mass">Mass</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="action_About">About</string>
    <string name="about">About</string>
    <string name="kl">Kelvin (K)</string>
    <string name="prince_vishwakarma">Prince Vishwakarma</string>
    <string name="result_of">Result of</string>
    <string name="unit_converter">UNIT CONVERTER</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="www_newsmarttrick_com">www.pythonsourcecode.com</string>
    <string name="contact_us_on_website">Contact us on Website</string>
    <string name="todo1">TODO1</string>
    <string name="thanks_you_from_all_member_of_nst_group">Thanks You From all member of PCS Group</string>
    <string name="teamdes">Firstly, We tells about the our team. our team contain five members namely Prince Vishwakarma ,Vivek Sahani,Rahul Singh, Yash Kumar Singh,Vimlesh Sahani.We are College friends in Computer Science Engineering and also part of the new startup and you will get about soon.Our team are very social friendly and you can get in touch with team, just follow PCS Team on www.pythonsourcecode.com .
    Developed by Prince Vishwakarma and UI Design by Vivek Sahani</string>
    <string name="developed_by_prince_vishwakarma_and_ui_design_by_vivek_sahani">Developed by Prince Vishwakarma and UI Design by Vivek Sahani</string>


</resources>
