<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".timeActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="24sp"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input"
            android:layout_centerHorizontal="true"
            android:background="@drawable/common_google_signin_btn_text_light_normal_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="85dp"
            android:layout_marginLeft="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="match_parent"


                android:layout_weight="70"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/w"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    tools:text="0"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="179dp"
                android:layout_height="match_parent"


                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mili"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sec"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/min"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hou"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/day"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/week"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="112dp"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/result_of"
                android:textAllCaps="false"


                android:textSize="18sp" />

            <TextView
                android:id="@+id/resultshow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="50"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </LinearLayout>
        <Button
            android:id="@+id/bt"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/cornerround"
            android:text="@string/convert"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



</android.support.v4.widget.DrawerLayout>